broken ui fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+/* $theme-colors: (
+  "primary": #0074d9,
+  "danger": #ff4136
+); */
+
+/* @import "node_modules/bootstrap/scss/bootstrap"; */
+
+body {
+    padding-top: 80px;
+  }
+  .template {
+    padding: 3rem 1.5rem;
+    text-align: center;
+  }
